--- a/Q4_Text_Processing.ipynb
+++ b/Q4_Text_Processing.ipynb
@@ -9,6 +9,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#####  import libraries and pre-cleaning\n",
+        "Here we are going to install, import and read the passage saved as a txt file"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install -r requirements.txt"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -53,6 +70,13 @@
         "text = open('./text.txt','r')\n",
         "text = text.read()\n",
         "text"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here, we want to remove punctuation. Punctuations provided by string library in Python"
       ]
     },
     {
@@ -113,6 +137,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Using replace, and some regex, we're able to remove the punctuations. We also lower the caps, hence make it easier to process"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 66,
       "metadata": {
@@ -144,29 +175,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 67,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "G3qlhwv2xHT0",
-        "outputId": "d8f51d71-86db-439f-b65e-7030bfb8ca87"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "1954"
-            ]
-          },
-          "execution_count": 67,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "len(text.split(' '))"
+        "##### Step 1: Tokenizing\n",
+        "Tokenizing is a step when we 'token' (assign a number to) words. We tokenize words so the computer (which understands numbers better) could process each word easier. We are using NLTK as its also provide us with tokenizer for English languange."
       ]
     },
     {
@@ -1232,6 +1245,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Okay! We have 1966 words got tokenized"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##### Step 2: Remove stopwords\n",
+        "Stopwords is a collection of words that has less meaning. Each language has their own stopwords. By removing stopwords, prevents us to processing less meaning yet frequenty seen words. Here, we are using English language stopwords provided by NLTK library."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 70,
       "metadata": {
@@ -1476,6 +1504,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "As we can see, some words got removed!"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 72,
       "metadata": {
@@ -1499,6 +1534,13 @@
       ],
       "source": [
         "len(tokenized)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "then we count each word appearance"
       ]
     },
     {
@@ -1537,6 +1579,14 @@
       "source": [
         "token_series = pd.Series(tokenized)\n",
         "token_series.value_counts()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##### Step 3: Stemming:\n",
+        "Stemming converts tokenned words into their root form. For example from 'standing' to 'stand'. We stem each token so we simplify (once again) the words to be processed. Here we use PorterStemmer function from NLTK library."
       ]
     },
     {
@@ -2567,6 +2617,21 @@
         "ps = PorterStemmer()\n",
         "stemmed_token = [ps.stem(word) for word in token_series]\n",
         "stemmed_token"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Yep, all the tokens transformed into their root form"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##### Step 4: Lemmatization:\n",
+        "Lemmatization converts word to its dictionary base form but takes grammar and vocab into considerations. Here is the main difference of Lemmatization from Stemming. Stemming only takes the root without grammatical and vocabulary consideration. These techniques are really popular when processing text in English."
       ]
     },
     {
@@ -3612,6 +3677,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##### Optional: Find most common word pairing:\n",
+        "This step helps us to identify the most common two words to be paired. For another passage this could be \"sun\" and \"shines\", or \"back\" and \"forth\". This adds up to the analysis using BigramCollocationFinder in NLTK's collocations."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 78,
       "metadata": {
@@ -3643,10 +3716,26 @@
         "#find top 2 combinations\n",
         "from nltk.collocations import BigramCollocationFinder\n",
         "from nltk.metrics import BigramAssocMeasures as bigram_measure\n",
+        "COUPLES = 10\n",
         "\n",
         "bigram = BigramCollocationFinder.from_words(token_series)\n",
-        "for pairs in bigram.nbest(bigram_measure.likelihood_ratio, 10):\n",
+        "for pairs in bigram.nbest(bigram_measure.likelihood_ratio, COUPLES):\n",
         "  print(\" + \".join(pairs))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##### Create word clouds\n",
+        "Word clouds will help us visualise most used word and helps us a lot in the analysis."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "first, we reconstruct all lemmatized tokens into a passage again"
       ]
     },
     {
@@ -3678,6 +3767,13 @@
       "source": [
         "processed_text = \" \".join([word for word in lemmatized])\n",
         "processed_text"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "then, using wordcloud and matplotlib library, create wordcloud visualisation!"
       ]
     },
     {
