--- a/Q5/Q5_Haar_Cascade_face_recognition.ipynb
+++ b/Q5/Q5_Haar_Cascade_face_recognition.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt"
+    "!pip install -r ../requirements.txt"
    ]
   },
   {
